* added "currentFormObject" template method to AbstractFormController, for post-processing of a session form object
* FixedLocaleResolver returns the JVM's default Locale if no explicit default Locale specified
* VelocityView converts Velocity's MethodInvocationException to a Spring NestedServletException with original root cause


Changes in version 1.2.6 (14.11.2005)
-------------------------------------

Package org.springframework.aop
* fixed AbstractPerformanceMonitorInterceptor to have "prefix" and "suffix" initialized with emtpy String (avoiding NPE)

Package org.springframework.beans
* reworked BeanUtils's "copyProperties" method to properly ignore properties not found in the target bean
* added new "copyProperties" variant to BeanUtils, for restriction of copying to properties of specified class/interface
* factored out protected "newNestedBeanWrapper" template method from BeanWrapperImpl's "getNestedBeanWrapper" method
* factored out PropertyEditorRegistry interface from BeanWrapper, implemented by BeanWrapperImpl and DataBinder
* reworked PropertyEditorRegistrar interface to work on PropertyEditorRegistry interface instead of DataBinder class
* PropertyPlaceholderConfigurer logs resolved values at debug level, for improved traceability
* AbstractBeanFactory throws BeanDefinitionStoreException if parent not found (instead of NoSuchBeanDefinitionException)
* DefaultListableBeanFactory does not include its toString output in NoSuchBeanDefinitionException messages anymore
* deprecated PropertiesBeanDefinitionReader's "class" and "parent" keywords in favor of "(class)" and "(parent)"
* PropertiesBeanDefinitionReader supports loading bean definitions from properties files with non-standard encodings
* XmlBeanDefinitionReader supports reading from resource with explicit encoding
* XmlBeanDefinitionReader supports reading from SAX InputSource (useful to pass in XML system id or java.io.Reader)