@@ -125,6 +125,9 @@
 			<fileset dir="${spring.root}/lib/struts">
 				<include name="struts.jar"/>
 			</fileset>
+			<fileset dir="${spring.root}/lib/aspectj">
+				<include name="aspectjweaver.jar"/>
+			</fileset>
 			<fileset dir="${spring.root}/dist">
 				<include name="spring.jar"/>
 			</fileset>
