@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE beans PUBLIC "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
 
 <!--
   - Application context definition for JPetStore's business layer.
   - Contains bean references to the transaction manager and to the DAOs in
   - dataAccessContext-local/jta.xml (see web.xml's "contextConfigLocation").
   -->
-<beans>
+<beans xmlns="http://www.springframework.org/schema/beans"
+	   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	   xmlns:aop="http://www.springframework.org/schema/aop"
+	   xmlns:tx="http://www.springframework.org/schema/tx"
+	   xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans.xsd
+       http://www.springframework.org/schema/aop http://www.springframework.org/schema/aop/spring-aop.xsd
+       http://www.springframework.org/schema/tx http://www.springframework.org/schema/transaction/spring-tx.xsd">
 
 	<!-- ========================= GENERAL DEFINITIONS ========================= -->
 
@@ -22,11 +27,11 @@
 	</bean>
 	
 	<!-- MailSender used by EmailAdvice -->
-	<!--
+	
 	<bean id="mailSender" class="org.springframework.mail.javamail.JavaMailSenderImpl">
 		<property name="host" value="${mail.host}"/>
 	</bean>
-	-->
+	
 
 	<!-- ========================= BUSINESS OBJECT DEFINITIONS ======================== -->
 
@@ -40,58 +45,30 @@
 	<!--
 	<bean id="emailAdvice" class="org.springframework.samples.jpetstore.domain.logic.SendOrderConfirmationEmailAdvice">
 		<property name="mailSender" ref="mailSender"/>
-	</bean>
-	-->
-
-	<!-- Advisor encapsulating email advice -->
+	</bean>-->
+	
+	<aop:config>
+		<aop:advisor pointcut="execution(* *..PetStore.*(..))"
+					 advice-ref="txAdvice"/>
+	</aop:config>	
+	
+	<tx:advice id="txAdvice">
+		<tx:attributes>
+			<tx:method name="insert*"/>
+			<tx:method name="update*"/>
+			<tx:method name="*" read-only="true"/>
+		</tx:attributes>
+	</tx:advice>
+	
 	<!--
-	<bean id="emailAdvisor" class="org.springframework.aop.support.RegexpMethodPointcutAdvisor">
-		<constructor-arg ref="emailAdvice"/>
-		<property name="pattern" value=".*insertOrder.*"/>
-	</bean>
-	-->
-
-	<!--
-		- A parent bean definition which is a base definition for transaction proxies.
-		- It's marked as abstract, since it's not supposed to be instantiated itself.
-		- We set shared transaction attributes here, following our naming patterns.
-		- The attributes can still be overridden in child bean definitions.
-    -->
-	<bean id="baseTransactionProxy" class="org.springframework.transaction.interceptor.TransactionProxyFactoryBean"
-		  abstract="true">
-		<property name="transactionManager" ref="transactionManager"/>
-		<property name="transactionAttributes">
-			<props>
-				<prop key="insert*">PROPAGATION_REQUIRED</prop>
-				<prop key="update*">PROPAGATION_REQUIRED</prop>
-				<prop key="*">PROPAGATION_REQUIRED,readOnly</prop>
-			</props>
-		</property>
-	</bean>
-
-	<!--
-	  - JPetStore primary business object (default implementation), as an inner bean wrapped
-		- by an outer transactional proxy. The two bean definitions could have been separate,
-		- but this is cleaner as there is no need to ever access the unwrapped object.
+	  - JPetStore primary business object (default implementation)
 		-->
-	<bean id="petStore" parent="baseTransactionProxy">
-		<property name="target">
-			<bean class="org.springframework.samples.jpetstore.domain.logic.PetStoreImpl">
-				<property name="accountDao" ref="accountDao"/>
-				<property name="categoryDao" ref="categoryDao"/>
-				<property name="productDao" ref="productDao"/>
-				<property name="itemDao" ref="itemDao"/>
-				<property name="orderDao" ref="orderDao"/>
-			</bean>
-		</property>
-		<!-- Uncomment the following in order to enable mail sending aspect -->
-		<!--
-		<property name="postInterceptors">
-			<list>
-				<ref bean="emailAdvisor"/>
-			</list>
-		</property>
- 		-->
+	<bean id="petStore" class="org.springframework.samples.jpetstore.domain.logic.PetStoreImpl">
+		<property name="accountDao" ref="accountDao"/>
+		<property name="categoryDao" ref="categoryDao"/>
+		<property name="productDao" ref="productDao"/>
+		<property name="itemDao" ref="itemDao"/>
+		<property name="orderDao" ref="orderDao"/>
 	</bean>
 
 	<!-- ========================= REMOTE EXPORTER DEFINITIONS ======================== -->
